# RAG-4-Learning-System

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data-code/: [Solution]-Basic-RAG.ipynb  [Solution]-RAG-Learning-System.ipynb  [Solution]_Flashcard.ipynb  [Solution]_QA.ipynb  [Solution]_Quiz.ipynb  [Solution]_Summary.ipynb
data-code/Hint/: [Hint]-Building-Simple-NotebookLM.ipynb
src/: __init__.py  config.py  documents.py  export.py  filters.py  indexing.py  learning.py  llm.py  ocr.py  rag.py  registry.py  schemas.py  store.py
src/evaluation/: __init__.py  chunking_strategies.py  ragas_evaluator.py  run_chunking.py  run_reranking.py
src/interfaces/: __init__.py  api.py  cli.py  styles.py  ui.py
src/prompts/: answer.jinja2  flashcards.jinja2  quiz.jinja2  summary_document.jinja2  summary_query.jinja2
