[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notebooklm-rag"
version = "0.1.0"
description = "A modular local RAG workspace extracted from the original NotebookLM notebooks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.20.0",
  "fastapi>=0.115.0",
  "gradio>=5.0.0",
  "jinja2>=3.1.0",
  "langchain>=0.2.0",
  "langchain-community>=0.2.0",
  "langchain-core>=0.2.0",
  "langchain-google-genai>=1.0.0",
  "langchain-huggingface>=0.0.3",
  "langchain-mistralai>=0.2.0",
  "langchain-qdrant>=0.1.0",
  "langchain-text-splitters>=0.2.0",
  "loguru>=0.7.0",
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "pypdf>=4.2.0",
  "qdrant-client>=1.10.0",
  "ragas>=0.1.0",
  "sentence-transformers>=2.7.0",
  "torch>=2.0.0",
  "transformers>=4.40.0",
  "typer>=0.12.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
notebooklm = "src.interfaces.cli:run"

[tool.setuptools.packages.find]
include = ["src*"]
